--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 /Face/
 /testFace/
+/test1.py
+/test2.py
+/test_json.py
+/test_json2.py
+/test_json_min.py
+/tets_pkl.py
+/reold_img.py
+/111111.py
+/deefFace_test.py
