--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,12 @@
-opencv-python~=4.8.1.78
-opencv-contrib-python
-tensorflow~=2.14.0
-torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu117^C
-onnx?
-
-numpy~=1.26.1
-torch~=2.0.1+cu117
-torchvision~=0.15.2+cu117
-tqdm~=4.66.1
-gdown~=4.7.1
-keras~=2.14.0
-pandas~=2.1.3
-SQLAlchemy~=2.0.23
-matplotlib~=3.8.2
-fastapi~=0.109.0
-uvicorn[standard]~=0.27.0
-
-greenlet~=3.0.2
-scipy~=1.12.0
+numpy
+opencv-python
+pandas
+tqdm
+gdown
+torch
+torchvision
+torchaudio
+sqlalchemy
+scipy
+fastapi[all]
+dlib
